put links on page

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
 
 <body>
   <div class="container">
+    <nav>
+      <a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks/Events">Intro to events</a>
+      <a href="https://developer.mozilla.org/en-US/docs/Web/Events">Event reference</a>
+    </nav>
     Hello, World! Ready to launch?
     <button id="launchButton">Launch!</button>
     <div class="modal off">
