--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       <a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/Building_blocks/Events">Intro to events</a>
       <a href="https://developer.mozilla.org/en-US/docs/Web/Events">Event reference</a>
     </nav>
-    Hello, World! Ready to launch?
+    <span>Hello, World! Ready to launch?</span>
     <button id="launchButton">Launch!</button>
     <div class="modal off">
       <div class="modal-opacity"></div>
