--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <a href="https://developer.mozilla.org/en-US/docs/Web/Events">Event reference</a>
     </nav>
     <span>Hello, World! Ready to launch?</span>
-    <button id="launchButton">Launch!</button>
+    <button id="launchButton" onclick="console.log('HTML on click');">Launch!</button>
     <div class="modal off">
       <div class="modal-opacity"></div>
       <div class="modal-dialog">
